# gambler

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  bun.lockb  diesel.toml  go.mod  main.go  package.json  tailwind.config.ts
calculator/: win.go
database/: database.go
database/models/: bets.go  main.go  user.go
database/models/customTypes/: betstatus.go  enums.go
handlers/: database.go  redis.go  routine.go  validator.go  websocket.go
handlers/routine/: routine.go
handlers/websocket/: README.md  commands.go  websocket.go
middleware/: jwt.go
migrations/2024-07-23-203544_create_users/: up.sql
routes/auth/controller/: auth.go
routes/auth/service/: auth.go
routes/bets/controller/: bets.go
routes/bets/service/: bets.go
routes/root/controller/: root.go
routes/root/service/: root.go
routes/user/controller/: user.go
routes/user/service/: user.go
routes/ws/: README.md  ws.go
routes/ws/controller/: main.go
routes/ws/route/controller/: ws.go
routes/ws/service/: main.go
src/: main.rs  schema.rs
src/app/: page.tsx
src/app/types/: user.ts
src/authentication/: mod.rs
src/database/: mod.rs
src/handler/: error_handler.rs  mod.rs  result_handler.rs
src/hooks/: useLocalStorage.tsx
src/interface/: mod.rs
src/interface/controller/: mod.rs
src/models/: user.rs
src/pages/: index.tsx
src/pages/login/: index.tsx
src/pages/register/: index.tsx
src/styles/: globals.css
src/types/: models.ts  server.ts
test/: rest-prj.xml
tools/: errorCode.go  tools.go  ws.go
(+2 files in other folders)
