[package]
name = "gambler"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
chrono = "0.4.38"
diesel = { version = "2", features = ["postgres", "chrono"] }
jsonwebtoken = "9.3.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.204"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel_postgres"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_postgres_pool"]
